@@ -10,10 +10,16 @@
     </parent>
 
     <groupId>org.jboss.windup.rules</groupId>
-    <artifactId>windup-rulesets</artifactId>
-    <version>5.2.1-SNAPSHOT</version>
+    <artifactId>windup-rulesets-parent</artifactId>
+    <version>6.0.1-SNAPSHOT</version>
 
-    <name>Windup Rulesets</name>
+    <name>Windup Rulesets Parent</name>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>rules</module>
+        <module>rules-themed</module>
+    </modules>
 
     <properties>
         <windup.scm.connection>scm:git:https://github.com/windup/windup-rulesets.git</windup.scm.connection>
@@ -21,9 +27,9 @@
         <windup.scm.url>http://github.com/windup/windup-rulesets</windup.scm.url>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <version.windup>5.2.1-SNAPSHOT</version.windup>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <version.windup>6.0.1-SNAPSHOT</version.windup>
     </properties>
 
     <scm>
@@ -86,285 +92,4 @@
         </dependencies>
     </dependencyManagement>
 
-    <dependencies>
-        <!-- Windup deps -->
-        <dependency>
-            <groupId>org.jboss.windup.graph</groupId>
-            <artifactId>windup-graph</artifactId>
-            <classifier>forge-addon</classifier>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.windup.config</groupId>
-            <artifactId>windup-config</artifactId>
-            <classifier>forge-addon</classifier>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.windup.config</groupId>
-            <artifactId>windup-config-xml</artifactId>
-            <classifier>forge-addon</classifier>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.windup.utils</groupId>
-            <artifactId>windup-utils</artifactId>
-            <classifier>forge-addon</classifier>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.windup.reporting</groupId>
-            <artifactId>windup-reporting</artifactId>
-            <classifier>forge-addon</classifier>
-            <scope>provided</scope>
-        </dependency>
-
-        <!-- Windup Rules Base -->
-        <dependency>
-            <groupId>org.jboss.windup.rules.apps</groupId>
-            <artifactId>windup-rules-base</artifactId>
-            <classifier>forge-addon</classifier>
-        </dependency>
-
-        <!-- Other rulesets. -->
-        <dependency>
-            <groupId>org.jboss.windup.rules.apps</groupId>
-            <artifactId>windup-rules-java</artifactId>
-            <classifier>forge-addon</classifier>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.windup.rules.apps</groupId>
-            <artifactId>windup-rules-java-ee</artifactId>
-            <classifier>forge-addon</classifier>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.windup.rules.apps</groupId>
-            <artifactId>windup-rules-java-project</artifactId>
-            <classifier>forge-addon</classifier>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.jboss.forge.furnace.container</groupId>
-            <artifactId>cdi-api</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.forge.furnace.container</groupId>
-            <artifactId>cdi</artifactId>
-            <classifier>forge-addon</classifier>
-            <scope>provided</scope>
-        </dependency>
-
-        <!-- Test dependencies -->
-        <dependency>
-            <groupId>org.jboss.windup</groupId>
-            <artifactId>windup-test-harness</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.windup</groupId>
-            <artifactId>windup-module-spec</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.1</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.jboss.windup.exec</groupId>
-            <artifactId>windup-exec</artifactId>
-            <classifier>forge-addon</classifier>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.30</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>1.7.30</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
-
-    <profiles>
-        <profile>
-            <id>java7</id>
-            <properties>
-                <arguments>-Xms512m -Xmx4096m -XX:MaxMetaspaceSize=2048m -XX:ReservedCodeCacheSize=128m</arguments>
-            </properties>
-            <activation>
-                <jdk>1.7</jdk>
-            </activation>
-        </profile>
-        <profile>
-            <id>java8</id>
-            <properties>
-                <arguments>-Xms512m -Xmx4096m -XX:ReservedCodeCacheSize=128m</arguments>
-            </properties>
-            <activation>
-                <jdk>1.8</jdk>
-            </activation>
-        </profile>
-        <profile>
-            <id>java9+</id>
-            <activation>
-                <jdk>[9,)</jdk>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <!-- http://maven.apache.org/surefire/maven-surefire-plugin/faq.html#late-property-evaluation -->
-                            <argLine>--add-modules java.se</argLine>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
-
-
-    <build>
-        <resources>
-            <resource>
-                <filtering>false</filtering>
-                <directory>rules-reviewed</directory>
-            </resource>
-            <resource>
-                <filtering>false</filtering>
-                <directory>rules-generated</directory>
-            </resource>
-        </resources>
-
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>Copy current ruleset schema from Windup core.</id>
-                        <goals>
-                            <goal>unpack</goal>
-                        </goals>
-                        <configuration>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>org.jboss.windup.config</groupId>
-                                    <artifactId>windup-config-xml</artifactId>
-                                    <version>${version.windup}</version>
-                                    <type>jar</type>
-                                    <classifier>forge-addon</classifier>
-                                    <includes>schema/*.xsd</includes>
-                                    <outputDirectory>${project.build.directory}/xsd</outputDirectory>
-                                </artifactItem>
-                            </artifactItems>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <!-- Validate the rulesets XML files. -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>xml-maven-plugin</artifactId>
-                <version>1.0</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>validate</goal>
-                        </goals>
-                        <phase>process-test-resources</phase>
-                    </execution>
-                </executions>
-                <configuration>
-                    <validationSets>
-                        <validationSet>
-                            <includes>
-                                <include>**/*.windup.xml</include>
-                                <include>**/*.windup.test.xml</include>
-                            </includes>
-                            <dir>rules-reviewed</dir>
-                            <systemId>${project.build.directory}/xsd/schema/windup-jboss-ruleset.xsd</systemId>
-                        </validationSet>
-                        <validationSet>
-                            <includes>
-                                <include>**/*.windup.xml</include>
-                                <include>**/*.windup.test.xml</include>
-                            </includes>
-                            <dir>rules-generated</dir>
-                            <systemId>${project.build.directory}/xsd/schema/windup-jboss-ruleset.xsd</systemId>
-                        </validationSet>
-                    </validationSets>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-               	<artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>${arguments}</argLine>
-                    <excludes>
-                        <exclude>**/WindupRulesMultipleTests*</exclude>
-                        <exclude>**/WindupRulesLinksTest*</exclude>
-                    </excludes>
-               	</configuration>
-            </plugin>
-            <plugin>
-               <groupId>org.apache.maven.plugins</groupId>
-               <artifactId>maven-jar-plugin</artifactId>
-               <configuration>
-                  <includes>
-                     <include>**/*.windup.xml</include>
-                     <include>**/*.technology.metadata.xml</include>
-                     <include>**/*.windup.technologytransformer.xml</include>
-                     <include>**/*.windup.categories.xml</include>
-                     <include>**/*.windup.label.xml</include>
-                     <include>**/*.windup.groovy</include>
-                     <include>**/*.rhamt.xml</include>
-                     <include>**/*.rhamt.groovy</include>
-                     <include>**/*.rhamt.label.xml</include>
-                     <include>**/*.mta.xml</include>
-                     <include>**/*.mta.groovy</include>
-                     <include>**/*.mta.label.xml</include>
-                     <include>eap6/api-jars/*.jar</include>
-                     <include>eap7/api-jars/*.jar</include>
-                     <include>**/*.xsl</include>
-                  </includes>
-               </configuration>
-            </plugin>
-            <!--
-            we need to download the CSS files each time we generate the surefire report due to
-            https://issues.apache.org/jira/browse/SUREFIRE-616
-            -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-site-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>download-css</id>
-                        <goals>
-                            <goal>site</goal>
-                        </goals>
-                        <phase>test</phase>
-                    </execution>
-                </executions>
-                <configuration>
-                    <generateReports>false</generateReports>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 </project>
